# hyperlink

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
android/: README.md  build.gradle.kts  settings.gradle.kts
android-bridge/: Cargo.toml
android-bridge/src/: lib.rs
android/app/: build.gradle.kts
android/app/src/main/: AndroidManifest.xml
android/app/src/main/java/com/hyperlink/companion/: DiscoveryManager.kt  MainActivity.kt  QuicClient.kt  ScreenCaptureService.kt
bench/: Cargo.toml  README.md
bench/results/: bench_20260707_121523.jsonl
bench/src/: clock_sync.rs  echo.rs  main.rs  report.rs  server.rs  transport.rs
docs/: ARCHITECTURE.md  SYSTEM_DESIGN.md  THREAT_MODEL.md
docs/adr/: 0001-transport-protocol-quic.md  0002-linux-host-language-rust.md  0003-video-codec-h264-baseline.md  0004-serialization-flatbuffers-protobuf.md  0005-pairing-trust-on-first-use.md
linux/: Cargo.toml  README.md
linux/src/: connection.rs  discovery.rs  main.rs  video_pipeline.rs  video_window.rs
protocol/: Cargo.toml  README.md
protocol/src/: clock.rs  config.rs  crypto.rs  echo.rs  lib.rs  message.rs  metrics.rs  version.rs  video.rs
