[package]
name = "hyperlink-android-bridge"
version = "0.1.0"
edition = "2021"
description = "JNI bridge for HyperLink Android companion to access the Rust QUIC core"
license = "Apache-2.0"

[lib]
name = "hyperlink_bridge"
crate-type = ["cdylib"]

[dependencies]
hyperlink-protocol = { path = "../protocol" }
tokio = { version = "1", features = ["full"] }
quinn = "0.11"
jni = "0.21"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["registry", "env-filter"] }
tracing-android = "0.2"
rustls = { version = "0.23", features = ["ring"] }
rustls-pki-types = "1"
rustls-pemfile = "2"
anyhow = "1"
lazy_static = "1.5"
bytes = "1"
