[package]
name = "hyperlink-bench"
version = "0.1.0"
edition = "2021"
description = "HyperLink latency/throughput measurement harness — see docs/SYSTEM_DESIGN.md Phase 0"
license = "Apache-2.0"

[dependencies]
hyperlink-protocol = { path = "../protocol" }
tokio = { version = "1", features = ["full"] }
clap = { version = "4", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
async-trait = "0.1"
anyhow = "1"

[[bin]]
name = "hyperlink-bench"
path = "src/main.rs"
