[package]
name = "hyperlink-protocol"
version = "0.1.0"
edition = "2021"
description = "HyperLink shared protocol types — wire format, versioning, and measurement structures"
license = "Apache-2.0"

[dependencies]
byteorder = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rustls = { version = "0.23", features = ["ring"] }
rustls-pki-types = "1"
rcgen = "0.14"
sha2 = "0.10"
anyhow = "1"

[dev-dependencies]
tempfile = "3"
